--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="UXUI,HTML,CSS,JS">
     <meta name="author" content="KIM YEASEUL">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>김예슬 포트폴리오</title>
+    <title>김예슬 포트폴리오1</title>
     <link rel="stylesheet" as="style" crossorigin
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css" />
