--- a/about.html
+++ b/about.html
@@ -70,9 +70,9 @@
             <div class="skill">
                 <h5>skill</h5>
                 <ul class="design">
-                    <li><img src="./img/about/Figma.svg" alt="Figma"></li>
+                    <li><img src="./img/about/figma.svg" alt="Figma"></li>
                     <li><img src="./img/about/Photoshop.svg" alt="Photoshop"></li>
-                    <li><img src="img/about/Illustrator.svg" alt="Illustrator"></li>
+                    <li><img src="./img/about/Illustrator.svg" alt="Illustrator"></li>
                     <li><img src="./img/about/html.svg" alt="html"></li>
                     <li><img src="./img/about/css.svg" alt="css"></li>
                     <li><img src="./img/about/js.svg" alt="js"></li>
