--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/about_media.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollToPlugin.min.js"></script>
@@ -23,7 +22,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"
         integrity="sha512-jEnuDt6jfecCjthQAJ+ed0MTVA++5ZKmlUcmDGBv2vUI/REn6FuIdixLNnQT+vKusE2hhTk2is3cFvv5wA+Sgg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
     <script src="js/about.js"></script>
 </head>
 
@@ -135,60 +133,61 @@
             </div><!-- tit -->
             <div class="horizontal-wrapper">
                 <div class="workli item1">
-                    <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=214%3A726&node-id=815-596&m=dev&scaling=min-zoom&content-scaling=fixed&t=z4Rj9joJNMZHSsMs-1"  target="_blank">
-                    <div class="top">
-                        <h4>TGIF</h4>
-                        <div class="sub">
-                            <p>2025.02-2025.03</p>
-                            <span>Website Renewal</span>
+                    <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=214%3A726&node-id=815-596&m=dev&scaling=min-zoom&content-scaling=fixed&t=z4Rj9joJNMZHSsMs-1"
+                        target="_blank">
+                        <div class="top">
+                            <h4>TGIF</h4>
+                            <div class="sub">
+                                <p>2025.02-2025.03</p>
+                                <span>Website Renewal</span>
+                            </div>
+                        </div><!-- horizontal-wrapper -->
+                        <div class="bottom_img">
+                            <img src="img/about/slide2.jpg" alt="tgif">
                         </div>
-                    </div><!-- horizontal-wrapper -->
-                    <div class="bottom_img">
-                        <img src="img/about/slide2.jpg" alt="tgif">
-                    </div>
-                </a>
+                    </a>
                 </div><!-- item1 -->
                 <div class="workli item2">
                     <a href="#" target="_blank">
-                    <div class="top">
-                        <h4>TOYBOX</h4>
-                        <div class="sub"><!--  -->
-                            <p>2025.01-2025.02</p>
-                            <span>Website</span>
+                        <div class="top">
+                            <h4>TOYBOX</h4>
+                            <div class="sub"><!--  -->
+                                <p>2025.01-2025.02</p>
+                                <span>Website</span>
+                            </div>
+                        </div><!-- horizontal-wrapper -->
+                        <div class="bottom_img">
+                            <img src="img/about/slide1.jpg" alt="toybox">
                         </div>
-                    </div><!-- horizontal-wrapper -->
-                    <div class="bottom_img">
-                        <img src="img/about/slide1.jpg" alt="toybox" >
-                    </div>
-                </a>
+                    </a>
                 </div><!-- item2 -->
                 <div class="workli item3">
-                    <a href="#"  target="_blank">
-                    <div class="top">
-                        <h4>VOCAPET</h4>
-                        <div class="sub">
-                            <p>2025.02-2025.03</p>
-                            <span>Team Project</span>
+                    <a href="#" target="_blank">
+                        <div class="top">
+                            <h4>VOCAPET</h4>
+                            <div class="sub">
+                                <p>2025.02-2025.03</p>
+                                <span>Team Project</span>
+                            </div>
+                        </div><!-- horizontal-wrapper -->
+                        <div class="bottom_img">
+                            <img src="img/about/slide3.jpg" alt="VOCAPET">
                         </div>
-                    </div><!-- horizontal-wrapper -->
-                    <div class="bottom_img">
-                        <img src="img/about/slide3.jpg" alt="VOCAPET">
-                    </div>
-                </a>
+                    </a>
                 </div><!-- item3 -->
                 <div class="workli item4">
                     <a href="company/index.html" target="_blank">
-                    <div class="top">
-                        <h4>COMPANY</h4>
-                        <div class="sub">
-                            <p>2025.04</p>
-                            <span>Clone Codding</span>
+                        <div class="top">
+                            <h4>COMPANY</h4>
+                            <div class="sub">
+                                <p>2025.04</p>
+                                <span>Clone Codding</span>
+                            </div>
+                        </div><!-- horizontal-wrapper -->
+                        <div class="bottom_img">
+                            <img src="img/about/slide7.jpg" alt="company">
                         </div>
-                    </div><!-- horizontal-wrapper -->
-                    <div class="bottom_img">
-                        <img src="img/about/slide7.jpg" alt="company" >
-                    </div>
-                </a>
+                    </a>
                 </div><!-- item4 -->
             </div><!-- list -->
         </section><!-- work -->
