--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
                             <h4>COMPANY</h4>
                             <div class="sub">
                                 <p>2025.04</p>
-                                <span>Clone Codding</span>
+                                <span>Website Renewal</span>
                             </div>
                         </div><!-- horizontal-wrapper -->
                         <div class="bottom_img">
