--- a/about.html
+++ b/about.html
@@ -28,11 +28,21 @@
 <body>
     <div class="wrap" data-scroll-container>
         <div class="custom_cursor2"></div>
-        <div class="goback">
+        <div class="menu">
             <a href="#">
-                <img src="img/about/goback.svg" alt="back">
+                <img src="img/about/menu.svg" alt="back">
             </a>
+            <div class="menu_ul">
+                <ul class="gnb">
+                    <li><a href="#main"><span>MAIN</span></a></li>
+                    <li><a href="#resume"><span>RESUME</span></a></li>
+                    <li><a href="#work"><span>WORK</span></a></li>
+                    <li><a href="#about"><span>ABOUT</span></a></li>
+                    <li><a href="#contact"><span>CONTACT</span></a></li>
+                </ul>
+            </div>
         </div>
+        <div class="menu_bg"></div>
         <section id="main" data-scroll-section>
             <div class="bg">
                 <img src="img/about/star.svg" alt="" class="star">
@@ -133,62 +143,114 @@
             </div><!-- tit -->
             <div class="horizontal-wrapper">
                 <div class="workli item1">
-                    <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=214%3A726&node-id=815-596&m=dev&scaling=min-zoom&content-scaling=fixed&t=z4Rj9joJNMZHSsMs-1"
-                        target="_blank">
-                        <div class="top">
+                    <div class="top">
+                        <div class="txt">
                             <h4>TGIF</h4>
                             <div class="sub">
                                 <p>2025.02-2025.03</p>
                                 <span>Website Renewal</span>
                             </div>
-                        </div><!-- horizontal-wrapper -->
-                        <div class="bottom_img">
-                            <img src="img/about/slide2.jpg" alt="tgif">
                         </div>
-                    </a>
+                        <div class="button">
+                            <a href="#">VIEW WEBSITE</a>
+                            <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=214%3A726&node-id=815-596&m=dev&scaling=min-zoom&content-scaling=fixed&t=z4Rj9joJNMZHSsMs-1"
+                                target="_blank">VIEW DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="bottom_img">
+                        <img src="img/about/slide2.jpg" alt="tgif">
+                    </div>
                 </div><!-- item1 -->
                 <div class="workli item2">
-                    <a href="#" target="_blank">
-                        <div class="top">
+                    <div class="top">
+                        <div class="txt">
                             <h4>TOYBOX</h4>
-                            <div class="sub"><!--  -->
+                            <div class="sub">
                                 <p>2025.01-2025.02</p>
                                 <span>Website</span>
-                            </div>
-                        </div><!-- horizontal-wrapper -->
-                        <div class="bottom_img">
-                            <img src="img/about/slide1.jpg" alt="toybox">
+                            </div><!-- txt -->
                         </div>
-                    </a>
+                        <div class="button">
+                            <a href="#">VIEW WEBSITE</a>
+                            <a href="#">VIEW DETAILS</a>
+                        </div>
+                    </div><!-- top -->
+                    <div class="bottom_img">
+                        <img src="img/about/slide1.jpg" alt="toybox">
+                    </div>
                 </div><!-- item2 -->
                 <div class="workli item3">
-                    <a href="#" target="_blank">
-                        <div class="top">
+                    <div class="top">
+                        <div class="txt">
                             <h4>VOCAPET</h4>
                             <div class="sub">
                                 <p>2025.02-2025.03</p>
                                 <span>Team Project</span>
                             </div>
-                        </div><!-- horizontal-wrapper -->
-                        <div class="bottom_img">
-                            <img src="img/about/slide3.jpg" alt="VOCAPET">
                         </div>
-                    </a>
+                        <div class="button">
+                            <a href="#">VIEW WEBSITE</a>
+                            <a href="#">VIEW DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="bottom_img">
+                        <img src="img/about/slide3.jpg" alt="VOCAPET">
+                    </div>
                 </div><!-- item3 -->
                 <div class="workli item4">
-                    <a href="company/index.html" target="_blank">
-                        <div class="top">
+                    <div class="top">
+                        <div class="txt">
                             <h4>COMPANY</h4>
                             <div class="sub">
                                 <p>2025.04</p>
                                 <span>Website Renewal</span>
                             </div>
-                        </div><!-- horizontal-wrapper -->
-                        <div class="bottom_img">
-                            <img src="img/about/slide7.jpg" alt="company">
                         </div>
-                    </a>
+                        <div class="button">
+                            <a href="#">VIEW WEBSITE</a>
+                            <a href="#">VIEW DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="bottom_img">
+                        <img src="img/about/slide7.jpg" alt="company">
+                    </div>
                 </div><!-- item4 -->
+                <div class="workli item4">
+                    <div class="top">
+                        <div class="txt">
+                            <h4>COMPANY</h4>
+                            <div class="sub">
+                                <p>2025.04</p>
+                                <span>Website Renewal</span>
+                            </div>
+                        </div>
+                        <div class="button">
+                            <a href="#">VIEW WEBSITE</a>
+                            <a href="#">VIEW DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="bottom_img">
+                        <img src="img/about/slide7.jpg" alt="company">
+                    </div>
+                </div><!-- item5 -->
+                <div class="workli item4">
+                    <div class="top">
+                        <div class="txt">
+                            <h4>COMPANY</h4>
+                            <div class="sub">
+                                <p>2025.04</p>
+                                <span>Website Renewal</span>
+                            </div>
+                        </div>
+                        <div class="button">
+                            <a href="#">VIEW WEBSITE</a>
+                            <a href="#">VIEW DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="bottom_img">
+                        <img src="img/about/slide7.jpg" alt="company">
+                    </div>
+                </div><!-- item6 -->
             </div><!-- list -->
         </section><!-- work -->
         <section id="about" data-scroll-section>
