--- a/about.html
+++ b/about.html
@@ -29,9 +29,7 @@
     <div class="wrap" data-scroll-container>
         <div class="custom_cursor2"></div>
         <div class="menu">
-            <a href="#">
                 <img src="img/about/menu.svg" alt="back">
-            </a>
             <div class="menu_ul">
                 <ul class="gnb">
                     <li><a href="#main"><span>MAIN</span></a></li>
@@ -152,9 +150,9 @@
                             </div>
                         </div>
                         <div class="button">
-                            <a href="#">VIEW WEBSITE</a>
+                            <a href="#">WEBSITE</a>
                             <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=214%3A726&node-id=815-596&m=dev&scaling=min-zoom&content-scaling=fixed&t=z4Rj9joJNMZHSsMs-1"
-                                target="_blank">VIEW DETAILS</a>
+                                target="_blank">DETAILS</a>
                         </div>
                     </div>
                     <div class="bottom_img">
@@ -171,8 +169,8 @@
                             </div><!-- txt -->
                         </div>
                         <div class="button">
-                            <a href="#">VIEW WEBSITE</a>
-                            <a href="#">VIEW DETAILS</a>
+                            <a href="#">WEBSITE</a>
+                            <a href="#">DETAILS</a>
                         </div>
                     </div><!-- top -->
                     <div class="bottom_img">
@@ -189,8 +187,8 @@
                             </div>
                         </div>
                         <div class="button">
-                            <a href="#">VIEW WEBSITE</a>
-                            <a href="#">VIEW DETAILS</a>
+                            <a href="#">WEBSITE</a>
+                            <a href="#">DETAILS</a>
                         </div>
                     </div>
                     <div class="bottom_img">
@@ -207,8 +205,8 @@
                             </div>
                         </div>
                         <div class="button">
-                            <a href="#">VIEW WEBSITE</a>
-                            <a href="#">VIEW DETAILS</a>
+                            <a href="#">WEBSITE</a>
+                            <a href="#">DETAILS</a>
                         </div>
                     </div>
                     <div class="bottom_img">
@@ -225,8 +223,7 @@
                             </div>
                         </div>
                         <div class="button">
-                            <a href="#">VIEW WEBSITE</a>
-                            <a href="#">VIEW DETAILS</a>
+                            <a href="#">WEBSITE</a>
                         </div>
                     </div>
                     <div class="bottom_img">
@@ -243,8 +240,7 @@
                             </div>
                         </div>
                         <div class="button">
-                            <a href="#">VIEW WEBSITE</a>
-                            <a href="#">VIEW DETAILS</a>
+                            <a href="#">WEBSITE</a>
                         </div>
                     </div>
                     <div class="bottom_img">
