--- a/about.html
+++ b/about.html
@@ -29,7 +29,8 @@
     <div class="wrap" data-scroll-container>
         <div class="custom_cursor2"></div>
         <div class="menu">
-                <img src="img/about/menu.svg" alt="back">
+                <img src="img/about/menu.svg" alt="" class="menuop on">
+                <img src="img/about/close.svg" alt="" class="menucl">
             <div class="menu_ul">
                 <ul class="gnb">
                     <li><a href="#main"><span>MAIN</span></a></li>
@@ -306,14 +307,9 @@
                     </div><!-- cont -->
                 </div><!-- top -->
                 <div class="bottom">
-                    <p>Bibo, an eccentric alien, decides to study abroad on Earth, a billion light years away, despite
-                        opposition from his family. He checked Earth's coordinates on a metal plate onboard a space
-                        probe and set off, but after a long interstellar flight, the spaceship breaks down and
-                        crash-lands in City A.</p>
-                    <p>After entrusting the repair of the spaceship to an engineer on Earth and starting a full-fledged
-                        study abroad life, Bibo is completely immersed in Earth culture. In particular, Earth culture
-                        and art are completely different from Bibo's home galaxy 281**1, and there is much to learn.
-                        Today, a friend of Earth said he would show Bibo a museum...</p>
+                    <p>Bibo, an alien from the distant planet Creatia, came to study abroad on a mysterious and colorful planet called Earth because of his deep curiosity. Among the countless stars, this planet, full of emotions, colors, and creativity, was a place that gave Bibo a special feeling and inspiration.</p>
+                    <p>Here, Bibo learns design, UX, and digital technology, and learns how to communicate with people on Earth through design. In the process, he realizes the power of design to move people's hearts, not just acquires simple skills, and continues to take on new challenges every day with joy and passion as his driving force.</p>
+                        <p>This portfolio is a record of such a study abroad experience on Earth. It provides a fresh perspective on creativity and cultural values ​​from a unique perspective as a person from another planet.</p>
                 </div>
             </div><!-- cont_txt -->
         </section><!-- contact -->
