--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="portfolio">
     <meta name="keywords" content="UXUI,HTML,CSS,JS">
-    <meta name="author" content="KIM YEASEUL">
+    <meta name="author" content="KIM YESEUL">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김예슬 포트폴리오</title>
     <link rel="stylesheet" as="style" crossorigin
@@ -69,7 +69,7 @@
             </div>
             <div class="txt">
                 <strong>KIM<br>
-                    YEASEUL</strong>
+                    YESEUL</strong>
             </div>
             <img src="img/about/main_bottom_frame.svg" alt="" class="bottom">
         </section><!-- main -->
@@ -297,11 +297,11 @@
                     <h3>contact</h3>
                     <div class="cont">
                         <div class="name">
-                            <h5>KIMYEASEUL</h5>
+                            <h5>KIMYESEUL</h5>
                             <h6>ARTIST</h6>
                         </div>
                         <div class="mail">
-                            <h5>address@address</h5>
+                            <a href="mailto:kimyeaseuld@gmail.com"><h5>yeseulkimd@gmail.com</h5></a>
                             <h6>MAIL</h6>
                         </div>
                     </div><!-- cont -->
