--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="portfolio">
     <meta name="keywords" content="UXUI,HTML,CSS,JS">
-    <meta name="author" content="KIM YEASEUL">
+    <meta name="author" content="KIM YESEUL">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김예슬 포트폴리오</title>
     <link rel="stylesheet" as="style" crossorigin
