--- a/about.html
+++ b/about.html
@@ -155,8 +155,7 @@
                             </div>
                             <div class="buttons">
                                 <a href="tgif/index.html" target="_blank">SITE</a>
-                                <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1416-155&viewport=315%2C882%2C0.22&t=Vz71JFaVBEl821Y2-1&scaling=min-zoom&content-scaling=fixed"
-                                    target="_blank">DETAILS</a>
+                                <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1416-155&viewport=315%2C882%2C0.22&t=Vz71JFaVBEl821Y2-1&scaling=min-zoom&content-scaling=fixed">DETAILS</a>
                             </div>
                         </div><!-- button -->
                     </div>
@@ -178,7 +177,7 @@
                             </div>
                             <div class="buttons">
                                 <a href="#" target="_blank">SITE</a>
-                                <a href="#" target="_blank">DETAILS</a>
+                                <a href="#">DETAILS</a>
                             </div>
                         </div><!-- button -->
                     </div><!-- top -->
@@ -200,7 +199,7 @@
                             </div>
                             <div class="buttons">
                                 <a href="#" target="_blank">SITE</a>
-                                <a href="#" target="_blank">DETAILS</a>
+                                <a href="#">DETAILS</a>
                             </div>
                         </div><!-- button -->
                     </div>
