--- a/tgif/index.html
+++ b/tgif/index.html
@@ -115,7 +115,7 @@
 
             <div class="swiper menuslide" data-aos="fade-left" data-aos-duration="3000">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><a href="#">
+                    <div class="swiper-slide"><a href="./menu.html">
                             <div class="img sl1"></div>
                             <div class="txt">
                                 <h5>휠렛 미뇽</h5>
@@ -123,7 +123,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="swiper-slide"><a href="#">
+                    <div class="swiper-slide"><a href="./menu.html">
                             <div class="img sl2"></div>
                             <div class="txt">
                                 <h5>바질 크림 파스타</h5>
@@ -131,7 +131,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="swiper-slide"><a href="#">
+                    <div class="swiper-slide"><a href="./menu.html">
                             <div class="img sl3"></div>
                             <div class="txt">
                                 <h5>시그니처 글레이즈드 립</h5>
@@ -139,7 +139,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="swiper-slide"><a href="#">
+                    <div class="swiper-slide"><a href="./menu.html">
                             <div class="img sl4"></div>
                             <div class="txt">
                                 <h5>씨즐링 치킨 올데이 파하타</h5>
@@ -147,7 +147,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="swiper-slide"><a href="#">
+                    <div class="swiper-slide"><a href="./menu.html">
                             <div class="img sl5"></div>
                             <div class="txt">
                                 <h5>디아블로 파스타</h5>
@@ -161,7 +161,9 @@
 
         <div class="brand_story">
             <h2 data-aos="fade-right" data-aos-duration="800">THANK GOD! <br>IT’S FRIDAYS!</h2>
-            <div class="bg_img"></div>
+            <div class="bg_img_wrapper">
+                <div class="bg_img"></div>
+            </div>
             <div class="bottom">
                 <div class="txt" data-aos="fade-up" data-aos-duration="1000">
                     <p>이렇게 금요일을 기다리는 설레임이 시작되는 곳,<br>언제나 금요일 같은 즐거움을 느낄 수 있는 곳!</p>
@@ -205,7 +207,7 @@
                             <li class="swiper-slide sl3"><a href="#">
                                     <div class="img"></div>
                                     <div class="txt">
-                                        <p>영상정보 처리기기 운영 및···</p>
+                                        <p>TGIF 메뉴 정보 안내(202···</p>
                                         <span>2025.01.30</span>
                                     </div>
                                 </a></li>
@@ -226,7 +228,7 @@
                             <li class="swiper-slide sl6"><a href="#">
                                     <div class="img"></div>
                                     <div class="txt">
-                                        <p>영상정보 처리기기 운영 및···</p>
+                                        <p>TGIF 메뉴 정보 안내(202···</p>
                                         <span>2025.01.30</span>
                                     </div>
                                 </a></li>
