--- a/about.html
+++ b/about.html
@@ -155,7 +155,8 @@
                             </div>
                             <div class="buttons">
                                 <a href="tgif/index.html" target="_blank">SITE</a>
-                                <a href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1416-155&viewport=315%2C882%2C0.22&t=Vz71JFaVBEl821Y2-1&scaling=min-zoom&content-scaling=fixed">DETAILS</a>
+                                <a
+                                    href="https://www.figma.com/proto/64NnJyJTbiwmYP4hHjvGEz/%EA%B9%80%EC%98%88%EC%8A%AC?page-id=1416%3A129&node-id=1473-2039&viewport=371%2C350%2C0.1&t=ojFqRGxm4izmgZAd-1&scaling=min-zoom&content-scaling=fixed">DETAILS</a>
                             </div>
                         </div><!-- button -->
                     </div>
@@ -176,7 +177,7 @@
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="#" target="_blank">SITE</a>
+                                <a href="toybox/index.html" target="_blank">SITE</a>
                                 <a href="#">DETAILS</a>
                             </div>
                         </div><!-- button -->
@@ -198,8 +199,10 @@
                             <div class="view">VIEW <div class="img"></div>
                             </div>
                             <div class="buttons">
-                                <a href="#" target="_blank">SITE</a>
-                                <a href="#">DETAILS</a>
+                                <a href="https://www.figma.com/proto/8xpkwAiN4FRM8CcweofcvF/1%EC%A1%B0-Vocapet-3%EC%A7%80%EB%A7%9D%EC%A1%B0-?page-id=2581%3A63422&node-id=2581-63423&p=f&viewport=365%2C115%2C0.04&t=pJswVDsbTdhpXrUY-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=2581%3A63423&show-proto-sidebar=1"
+                                    target="_blank">SITE</a>
+                                <a
+                                    href="https://www.figma.com/deck/0JDY2I1XbtbJuOkgjbKcyQ/-%EB%AF%B8%EB%8B%881--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_3%EC%A7%80%EB%A7%9D%EC%A1%B0--VOCAPET-%EB%B3%B4%EC%B9%B4%ED%8E%AB---Copy-?node-id=107-3706&viewport=-156%2C-159%2C0.73&t=ZXB2V2xc0wtAyNJL-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">DETAILS</a>
                             </div>
                         </div><!-- button -->
                     </div>
@@ -207,6 +210,28 @@
                         <img src="img/about/slide3.jpg" alt="VOCAPET">
                     </div>
                 </div><!-- item3 -->
+                <div class="workli item4">
+                    <div class="top">
+                        <div class="txt">
+                            <h4>SCENE-HOUSE</h4>
+                            <div class="sub">
+                                <p>2025.04-2025.05</p>
+                                <span>Team Project</span>
+                            </div>
+                        </div>
+                        <div class="button">
+                            <div class="view">VIEW <div class="img"></div>
+                            </div>
+                            <div class="buttons">
+                                <a href="http://yeskkimseul.github.io/scene-house/" target="_blank">SITE</a>
+                                <a href="https://www.figma.com/deck/5F9WtyJEV1KkksXuIl7AbQ/-%ED%8C%80%ED%94%8C1-4%EC%A1%B0--%EA%B2%B0%EA%B3%BC%EB%B3%B4%EA%B3%A0%EC%84%9C_%EC%94%AC%ED%95%98%EC%9A%B0%EC%8A%A4-SceneHouse---Copy-?node-id=1-771&viewport=-156%2C-159%2C0.73&t=1NZO7MNW5w5OlMoU-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">DETAILS</a>
+                            </div>
+                        </div><!-- button -->
+                    </div>
+                    <div class="bottom_img">
+                        <img src="img/about/slide7.jpg" alt="company">
+                    </div>
+                </div><!-- item4 -->
                 <div class="workli item4">
                     <div class="top">
                         <div class="txt">
@@ -223,23 +248,6 @@
                     <div class="bottom_img">
                         <img src="img/about/slide7.jpg" alt="company">
                     </div>
-                </div><!-- item4 -->
-                <div class="workli item4">
-                    <div class="top">
-                        <div class="txt">
-                            <h4>COMPANY</h4>
-                            <div class="sub">
-                                <p>2025.04</p>
-                                <span>Website Renewal</span>
-                            </div>
-                        </div>
-                         <div class="button">
-                            <a href="company/index.html" target="_blank" class="button2">SITE</a>
-                        </div><!-- button -->
-                    </div>
-                    <div class="bottom_img">
-                        <img src="img/about/slide7.jpg" alt="company">
-                    </div>
                 </div><!-- item5 -->
                 <div class="workli item4">
                     <div class="top">
@@ -250,7 +258,7 @@
                                 <span>Website Renewal</span>
                             </div>
                         </div>
-                         <div class="button">
+                        <div class="button">
                             <a href="company/index.html" target="_blank" class="button2">SITE</a>
                         </div><!-- button -->
                     </div>
