--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@
                 <div class="workli item4">
                     <div class="top">
                         <div class="txt">
-                            <h4>SCENE-HOUSE</h4>
+                            <h4>SCENEHOUSE</h4>
                             <div class="sub">
                                 <p>2025.04-2025.05</p>
                                 <span>Team Project</span>
