--- a/about.html
+++ b/about.html
@@ -252,14 +252,14 @@
                 <div class="workli item4">
                     <div class="top">
                         <div class="txt">
-                            <h4>COMPANY</h4>
+                            <h4>COSMETIC</h4>
                             <div class="sub">
                                 <p>2025.04</p>
                                 <span>Website Renewal</span>
                             </div>
                         </div>
                         <div class="button">
-                            <a href="company/index.html" target="_blank" class="button2">SITE</a>
+                            <a href="cosmetic/index.html" target="_blank" class="button2">SITE</a>
                         </div><!-- button -->
                     </div>
                     <div class="bottom_img">
