--- a/toybox/index.html
+++ b/toybox/index.html
@@ -27,7 +27,7 @@
     <!-- 메인비주얼 텍스트 호버 제외하고  옆에서 들어오게
 -->
 
-<div class="bg"></div>
+    <div class="bg"></div>
 
     <div class="wrap">
         <header>
@@ -47,10 +47,12 @@
                         <button class="ham">
                             <i class="fa-solid fa-bars"></i>
                             <!-- <i class="fa-solid fa-xmark"></i> -->
-                        </button>  
+                        </button>
                         <div class="side">
                             <ul class="snb">
-                                <li><a href="#"><h4>문구</h4></a>
+                                <li><a href="#">
+                                        <h4>문구</h4>
+                                    </a>
                                     <ul class="sub">
                                         <li><a href="#"><span>필기구</span></a></li>
                                         <li><a href="#"><span>노트/다이어리</span></a></li>
@@ -60,7 +62,9 @@
                                         <li><a href="#"><span>미술/디자인</span></a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#"><h4>토이</h4></a>
+                                <li><a href="#">
+                                        <h4>토이</h4>
+                                    </a>
                                     <ul class="sub">
                                         <li><a href="#"><span>캐릭터 피규어</span></a></li>
                                         <li><a href="#"><span>블록/조립</span></a></li>
@@ -69,7 +73,9 @@
                                         <li><a href="#"><span>RC/전자 장난감</span></a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#"><h4>푸드</h4></a>
+                                <li><a href="#">
+                                        <h4>푸드</h4>
+                                    </a>
                                     <ul class="sub">
                                         <li><a href="#"><span>간식</span></a></li>
                                         <li><a href="#"><span>음료</span></a></li>
@@ -77,7 +83,9 @@
                                         <li><a href="#"><span>수입식품</span></a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#"><h4>취미</h4></a>
+                                <li><a href="#">
+                                        <h4>취미</h4>
+                                    </a>
                                     <ul class="sub">
                                         <li><a href="#"><span>DIY/공예</span></a></li>
                                         <li><a href="#"><span>악기/음악</span></a></li>
@@ -85,14 +93,18 @@
                                         <li><a href="#"><span>스포츠</span></a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#"><h4>잡화</h4></a>
+                                <li><a href="#">
+                                        <h4>잡화</h4>
+                                    </a>
                                     <ul class="sub">
                                         <li><a href="#"><span>생활용품</span></a></li>
                                         <li><a href="#"><span>굿즈</span></a></li>
                                         <li><a href="#"><span>문구 잡화</span></a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#"><h4>가구</h4></a>
+                                <li><a href="#">
+                                        <h4>가구</h4>
+                                    </a>
                                     <ul class="sub">
                                         <li><a href="#"><span>책상/의자</span></a></li>
                                         <li><a href="#"><span>수납/정리 용품</span></a></li>
@@ -100,7 +112,9 @@
                                         <li><a href="#"><span>조명</span></a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#"><h4>의류</h4></a>
+                                <li><a href="#">
+                                        <h4>의류</h4>
+                                    </a>
                                     <ul class="sub">
                                         <li><a href="#"><span>상의</span></a></li>
                                         <li><a href="#"><span>하의</span></a></li>
@@ -109,7 +123,9 @@
                                         <li><a href="#"><span>액세서리</span></a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#"><h4>디지털 가전</h4></a>
+                                <li><a href="#">
+                                        <h4>디지털 가전</h4>
+                                    </a>
                                     <ul class="sub">
                                         <li><a href="#"><span>모바일 액세서리</span></a></li>
                                         <li><a href="#"><span>컴퓨터/주변기기</span></a></li>
@@ -120,7 +136,7 @@
                                 </li>
                             </ul><!-- snb -->
                         </div><!-- //.side  -->
-                    </div> <!-- //.ham_menu -->     
+                    </div> <!-- //.ham_menu -->
                     <div class="icon_right">
                         <a href="#" class="search"><i class="fa-solid fa-magnifying-glass"></i></a>
                         <a href="#" class="cart"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -135,13 +151,13 @@
             <div class="swiper main_slide">
                 <div class="swiper-wrapper main_slide_wrapper">
                     <div class="swiper-slide one"><a href="#">
-                            <div class="inner"><span>Special days<br>New arrivals</span>
-                                <p>스페셜 데이즈 신상 노트 & 다이어리 출시</p>
+                            <div class="inner"><span>Composition<br>New arrivals</span>
+                                <p>컴포지션 스튜디오 신상 노트 & 다이어리 출시</p>
                             </div>
                         </a></div>
                     <div class="swiper-slide two"><a href="#">
-                            <div class="inner"><span>바쁜 아침에 필요한 건</span>
-                                <p>시리얼볼 특가존 오픈</p>
+                            <div class="inner"><span>무도키즈 다 모여라!</span>
+                                <p>무도 20주년 기념 굿즈관</p>
                             </div>
                         </a></div>
                     <div class="swiper-slide three"><a href="#">
@@ -229,13 +245,13 @@
                                     <div class="top_button sale">sale</div>
                                     <div class="slide_img one"></div>
                                     <div class="txt">
-                                        <h5>치이카와 안경 거치대</h5>
+                                        <h5>[어프어프X다자이유상무]쿠라잉 코비</h5>
                                         <div class="bottom">
                                             <div class="price">
-                                                <em>16,300원</em>
-                                                <p>11,300원</p>
+                                                <em>43,000원</em>
+                                                <p>29,800원</p>
                                             </div><!-- //.price -->
-                                            <strong>44%</strong>
+                                            <strong>31%</strong>
                                         </div><!-- //bottom -->
                                     </div><!-- //.txt -->
                                 </a>
@@ -302,7 +318,7 @@
                                     <div class="top_button new">new</div>
                                     <div class="slide_img six"></div>
                                     <div class="txt">
-                                        <h5>[ 노플라스틱선데이 x… </h5>
+                                        <h5>[노플라스틱선데이x최고심] DIY 비즈 키링 2종</h5>
                                         <div class="bottom">
                                             <div class="price">
                                                 <p>21,000원</p>
@@ -556,7 +572,10 @@
                     <div class="pr_next_stop">
                         <i class="fa-solid fa-chevron-left"></i>
                         <i class="fa-solid fa-chevron-right"></i>
-                        <i class="fa-solid fa-pause"></i>
+                        <div class="stopplay">
+                            <i class="fa-solid fa-pause on"></i>
+                            <i class="fa-solid fa-play"></i>
+                        </div>
                     </div>
                 </div><!-- bottom -->
             </div><!-- //.inner -->
